# Activity-Manager

./: AbstractRepo.h  ActivitiesFileRepo.cpp  ActivitiesFileRepo.h  ActivitiesListGUI.cpp  ActivitiesListGUI.h  ActivitiesRepository.cpp  ActivitiesRepository.h  ActivitiesService.cpp  ActivitiesService.h  CMakeLists.txt  DynamicArray.h  Exceptions.cpp  Exceptions.h  GUI.cpp  GUI.h  MyTableModel.h  Observer.cpp  Observer.h  README.md  ReadOnlyGUI.cpp  ReadOnlyGUI.h  Tests.cpp  Tests.h  UI.cpp  UI.h  Undo.cpp  Undo.h  Validation.cpp  Validation.h  activity.cpp  activity.h  main.cpp
